# json-glib

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  NEWS  README.md  REUSE.toml  configure  configure.ac  meson.build  meson_options.txt
.reuse/: dep5
build-aux/: dist-docs.py  gen-installed-test.py  make_release.sh
cmake/: FindGLib.cmake
doc/: json-gboxed.md  json-glib-docs.xml  json-glib-format.rst  json-glib-format.xml  json-glib-sections.txt  json-glib-validate.rst  json-glib.toml.in  json-gobject.md  json-gvariant.md  meson.build  urlmap.js
doc/xml/: meson.build
json-glib/: CMakeLists.txt  config.h.in  json-array.c  json-builder.c  json-builder.h  json-debug.c  json-debug.h  json-enum-types.c.in  json-enum-types.h.in  json-gboxed.c  json-generator.c  json-generator.h  json-glib-format.c  json-glib-validate.c  json-glib.h  json-glib.pc.in  json-gobject-private.h  json-gobject.c  json-gobject.h  json-gvariant.c  json-gvariant.h  json-node.c  json-object.c  json-parser.c  json-parser.h  json-path.c  json-path.h  json-pointer.c  json-pointer.h  json-reader.c  json-reader.h  json-scanner.c  json-scanner.h  json-serializable.c  json-types-private.h  json-types.h  json-utils.c  json-utils.h  json-value.c  json-version-macros.h  (+2 more)
json-glib/tests/: array.c  boxed.c  builder.c  generator.c  gvariant.c  invalid.c  json-test-utils.h  meson.build  node.c  object.c  parser.c  path.c  pointer.c  reader.c  serialize-complex.c  serialize-full.c  serialize-simple.c  skip-bom.json
json-glib/tests/conformance/: README.md  conformance.c  impl.tests  invalid.tests  meson.build  valid.tests
po/: LINGUAS  Makevars  ab.po  as.po  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kab.po  ko.po  kw.po  lo.po  lt.po  lv.po  meson.build  ms.po  ne.po  nl.po  oc.po  (+17 more)
