# SPDX-FileCopyrightText: 2016 Thibault Saunier
# SPDX-FileCopyrightText: 2017 Emmanuele Bassi
# SPDX-FileCopyrightText: 2018 Collabora Ltd
# SPDX-FileCopyrightText: 2020 Collabora Ltd
#
# SPDX-License-Identifier: LGPL-2.1-or-later

option('introspection',
       type: 'feature', value: 'auto', yield: true,
       description: 'Build the introspection data (requires gobject-introspection)')
option('documentation',
       type: 'feature', value: 'auto', yield: true,
       description: 'Build the API reference (requires gi-docgen)')
option('gtk_doc',
       type: 'feature', value: 'auto', yield: true,
       deprecated: 'documentation',
       description: 'Build the API reference (requires gi-docgen)')
option('man',
       type: 'boolean', value: false,
       description: 'Build the man pages (requires xsltproc)')
option('tests',
       type: 'boolean', value: true,
       description: 'Build the tests')
option('conformance',
       type: 'boolean', value: true,
       description: 'Build conformance tests')
option('nls',
       type: 'feature', value: 'auto', yield: true,
       description: 'Enable native language support (translations)')
option('installed_tests',
       type: 'boolean', value: true,
       description: 'Enable installed tests')
